==> jiahuang/CC3000/spi.c <==
#include "Arduino.h"
#include "spi.h"
#include "hci.h"
#include "os.h"
#include "evnt_handler.h"
#define READ                    3
#define WRITE                   1
#define HI(value)               (((value) & 0xFF00) >> 8)
#define LO(value)               ((value) & 0x00FF)
#define ASSERT_CS()          (P1OUT &= ~BIT3)
#define DEASSERT_CS()        (P1OUT |= BIT3)
#define HEADERS_SIZE_EVNT       (SPI_HEADER_SIZE + 5)
#define SPI_HEADER_SIZE			(5)
#define 	eSPI_STATE_POWERUP 				 (0)
#define 	eSPI_STATE_INITIALIZED  		 (1)
#define 	eSPI_STATE_IDLE					 (2)
#define 	eSPI_STATE_WRITE_IRQ	   		 (3)
#define 	eSPI_STATE_WRITE_FIRST_PORTION   (4)
#define 	eSPI_STATE_WRITE_EOT			 (5)
#define 	eSPI_STATE_READ_IRQ				 (6)
#define 	eSPI_STATE_READ_FIRST_PORTION	 (7)
#define 	eSPI_STATE_READ_EOT				 (8)
#define CC3000_BUFFER_MAGIC_NUMBER (0xDE)

int init_spi(void)
{

    //set ss pin direction
    pinMode(SS, OUTPUT);
    pinMode(IRQ, INPUT);
    
    //Initialize SPI
    SPI.begin();

    //Set bit order to MSB first
    SPI.setBitOrder(SS,MSBFIRST);

    //Set data mode to CPHA 0 and CPOL 0
    SPI.setDataMode(SS, SPI_MODE0);

    //Set clock divider.  This will be different for each board

    //For Due, this sets to 4MHz.  CC3000 can go up to 26MHz
    SPI.setClockDivider(SS, SPI_CLOCK_DIV21);

    //For other boards, cant select SS pin. Only divide by 4 to get 4MHz
   		// SPI.setClockDivider(SPI_CLOCK_DIV4)

    SpiOpen(SPDR);

    return(ESUCCESS);
}

long
SpiFirstWrite(unsigned char *ucBuf, unsigned short usLength)
{
    //
    // workaround for first transaction
    //
    
    digitalWrite(SS,LOW);
	
    // Assuming we are running on 4 MHz ~50 micro delay is 1200 cycles;
    __delay_cycles(200);
	
    // SPI writes first 4 bytes of data
    SpiWriteDataSynchronous(ucBuf, 4);

    __delay_cycles(200);
	
    SpiWriteDataSynchronous(ucBuf + 4, usLength - 4);

    // From this point on - operate in a regular way
    sSpiInformation.ulSpiState = eSPI_STATE_IDLE;
    
    
    digitalWrite(SS,HIGH);

    return(0);
}

long
SpiWrite(unsigned char *pUserBuffer, unsigned short usLength)
{
    unsigned char ucPad = 0;

	//
	// Figure out the total length of the packet in order to figure out if there is padding or not
	//
    if(!(usLength & 0x0001))
    {
        ucPad++;
    }


    pUserBuffer[0] = WRITE;
    pUserBuffer[1] = HI(usLength + ucPad);
    pUserBuffer[2] = LO(usLength + ucPad);
    pUserBuffer[3] = 0;
    pUserBuffer[4] = 0;

    usLength += (SPI_HEADER_SIZE + ucPad);
        
        // The magic number that resides at the end of the TX/RX buffer (1 byte after the allocated size)
        // for the purpose of detection of the overrun. If the magic number is overriten - buffer overrun 
        // occurred - and we will stuck here forever!
	if (wlan_tx_buffer[CC3000_TX_BUFFER_SIZE - 1] != CC3000_BUFFER_MAGIC_NUMBER)
	{
		while (1)
			;
	}

	if (sSpiInformation.ulSpiState == eSPI_STATE_POWERUP)
	{
		while (sSpiInformation.ulSpiState != eSPI_STATE_INITIALIZED)
			;
	}
	
	if (sSpiInformation.ulSpiState == eSPI_STATE_INITIALIZED)
	{
		//
		// This is time for first TX/RX transactions over SPI: the IRQ is down - so need to send read buffer size command
		//
		SpiFirstWrite(pUserBuffer, usLength);
	}
	else 
	{
		
		

		while (sSpiInformation.ulSpiState != eSPI_STATE_IDLE)
		{
			;
		}

		
		sSpiInformation.ulSpiState = eSPI_STATE_WRITE_IRQ;
		sSpiInformation.pTxPacket = pUserBuffer;
		sSpiInformation.usTxPacketLength = usLength;
		
		
		//Assert SS
		digitalWrite(SS,LOW);

		//Wait for CC to be ready
		while (readIRQ != LOW)
		{
			;
		}

		SpiWriteDataSynchronous(pUserBuffer, usLength);

		//Assert SS
		digitalWrite(SS,HIGH);

		//Wait for CC to be ready
		while (readIRQ != HIGH)
		{
			;
		}


	}


    return(0);
}

char
SpiWriteDataSynchronous(unsigned char *data, unsigned short size)
{

	for (loc = 0; loc < size; loc++)

		SPDR = *data + loc;                    // Start the transmission
	    while (!(SPSR & (1<<SPIF)))     // Wait the end of the transmission
	    {
	    };
	    //char result = SPDR;
	}

void
SpiReadDataSynchronous(unsigned char *data, unsigned short size)
{
	long i = 0;
    unsigned char *data_to_send = tSpiReadHeader;
	
	for (i = 0; i < size; i ++)
    {
    	while (!(TXBufferIsEmpty()));
			//Dummy write to trigger the clock
		UCB0TXBUF = data_to_send[0];
		while (!(RXBufferIsEmpty()));
		data[i] = UCB0RXBUF;
    }
}
